@@ -5,6 +5,7 @@ bad_md5 = [
 
 good_md5 = [
         '67f12c6cbe25e70aa77a66bdf9f9ec60',
+        'b421019932258a86a588d6fc5b0dec64',
         'sentinel'
 ]
 
